<resources>
    <string name="app_name">Turing Trivia</string>
    <string name="turing_trivia">Turing Trivia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backgroundimage">BackgroundImage</string>
    <string name="submit">Submit</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="computerimage">ComputerImage</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
    <string name="radiobutton4">RadioButton</string>
    <string name="playbutton">PlayButton</string>
</resources>
